--- a/Recipea/View/Base.lproj/Main.storyboard
+++ b/Recipea/View/Base.lproj/Main.storyboard
@@ -10,12 +10,14 @@
         <!--Recipea-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="RecipeaViewController" customModule="Recipea" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="6y2-IJ-f8f" userLabel="Background">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U90-08-hG6">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
@@ -27,10 +29,11 @@
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HFy-FS-3OE">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="93.5"/>
-                                                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zsy-zX-YcM">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="93.5"/>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                                         <state key="normal" title="Discover">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -39,7 +42,6 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstItem="zsy-zX-YcM" firstAttribute="centerY" secondItem="Eqb-RB-JTL" secondAttribute="centerY" id="EFd-EK-658"/>
                                                     <constraint firstAttribute="trailing" secondItem="HFy-FS-3OE" secondAttribute="trailing" id="FKG-uT-gLM"/>
@@ -58,10 +60,11 @@
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LEQ-PU-r2a">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="93"/>
-                                                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YeE-SU-QQF">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="93"/>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                                         <state key="normal" title="My Recipes">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -70,7 +73,6 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="YeE-SU-QQF" secondAttribute="bottom" id="1uw-LN-i7x"/>
                                                     <constraint firstItem="YeE-SU-QQF" firstAttribute="leading" secondItem="Zta-sW-Ne3" secondAttribute="leading" id="43i-fX-Znn"/>
@@ -89,10 +91,11 @@
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xVq-1t-fMh">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="93.5"/>
-                                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1s-f6-I1F">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="93.5"/>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                                         <state key="normal" title="Shopping List">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -101,7 +104,6 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="e1s-f6-I1F" secondAttribute="trailing" id="6vH-bx-e0W"/>
                                                     <constraint firstItem="e1s-f6-I1F" firstAttribute="centerY" secondItem="BJP-ML-vTf" secondAttribute="centerY" id="GAp-lK-uex"/>
@@ -121,7 +123,6 @@
                                         </constraints>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="fjr-Qa-GIW" secondAttribute="trailing" constant="20" id="98j-dh-gMc"/>
                                     <constraint firstItem="fjr-Qa-GIW" firstAttribute="centerX" secondItem="U90-08-hG6" secondAttribute="centerX" id="W9u-tj-smG"/>
@@ -132,15 +133,26 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="6y2-IJ-f8f" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="64L-Du-H2c"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="U90-08-hG6" secondAttribute="trailing" id="APg-vJ-4Y2"/>
                             <constraint firstItem="U90-08-hG6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="LU7-MG-H3t"/>
+                            <constraint firstAttribute="bottom" secondItem="6y2-IJ-f8f" secondAttribute="bottom" id="eHv-V7-vKU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="U90-08-hG6" secondAttribute="bottom" id="l4H-GK-m3S"/>
                             <constraint firstItem="U90-08-hG6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lc3-qx-f9m"/>
+                            <constraint firstItem="6y2-IJ-f8f" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qEr-cz-wSO"/>
+                            <constraint firstItem="6y2-IJ-f8f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qrn-GD-5S1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Recipea" id="I98-e2-CxZ"/>
+                    <connections>
+                        <outlet property="backgroundImage" destination="6y2-IJ-f8f" id="ahu-0w-osT"/>
+                        <outlet property="discoverImage" destination="HFy-FS-3OE" id="Rhw-O2-d5l"/>
+                        <outlet property="myRecipeImage" destination="LEQ-PU-r2a" id="PK6-d6-der"/>
+                        <outlet property="shoppingListImage" destination="xVq-1t-fMh" id="eqG-ek-urr"/>
+                    </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="109.82142857142857"/>
         </scene>
@@ -310,7 +322,7 @@
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -357,4 +369,7 @@
             <point key="canvasLocation" x="2707" y="-152"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Background" width="100" height="100"/>
+    </resources>
 </document>
