--- a/Recipea/View/Base.lproj/Main.storyboard
+++ b/Recipea/View/Base.lproj/Main.storyboard
@@ -256,14 +256,72 @@
                     <view key="view" contentMode="scaleToFill" id="jJE-P1-pNQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mjt-TK-8dR">
+                                <rect key="frame" x="20" y="108" width="374" height="734"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcE-5A-E4F">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="734"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cr-rU-IaR">
+                                                <rect key="frame" x="0.0" y="16" width="374" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="35" id="LqS-0S-9UL"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ts8-ey-kJz">
+                                                <rect key="frame" x="0.0" y="81" width="374" height="23.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="23.5" id="GOb-7r-vNn"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aw0-Uy-zOa">
+                                                <rect key="frame" x="0.0" y="119.5" width="374" height="20"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Ts8-ey-kJz" secondAttribute="trailing" id="5vv-t7-9iz"/>
+                                            <constraint firstItem="Ts8-ey-kJz" firstAttribute="leading" secondItem="LcE-5A-E4F" secondAttribute="leading" id="COw-2m-NqX"/>
+                                            <constraint firstItem="Aw0-Uy-zOa" firstAttribute="leading" secondItem="LcE-5A-E4F" secondAttribute="leading" id="HgQ-L0-FrA"/>
+                                            <constraint firstAttribute="trailing" secondItem="Aw0-Uy-zOa" secondAttribute="trailing" id="K99-si-QH2"/>
+                                            <constraint firstItem="Aw0-Uy-zOa" firstAttribute="top" secondItem="Ts8-ey-kJz" secondAttribute="bottom" constant="15" id="RKU-cE-uMf"/>
+                                            <constraint firstAttribute="trailing" secondItem="5cr-rU-IaR" secondAttribute="trailing" id="wMZ-Lp-IAV"/>
+                                            <constraint firstItem="5cr-rU-IaR" firstAttribute="leading" secondItem="LcE-5A-E4F" secondAttribute="leading" id="weL-nU-irl"/>
+                                            <constraint firstItem="Ts8-ey-kJz" firstAttribute="top" secondItem="5cr-rU-IaR" secondAttribute="bottom" constant="30" id="yaj-us-xb1"/>
+                                            <constraint firstItem="5cr-rU-IaR" firstAttribute="top" secondItem="LcE-5A-E4F" secondAttribute="top" constant="16" id="zY2-ei-ieR"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="mjt-TK-8dR" firstAttribute="leading" secondItem="3kH-A8-i14" secondAttribute="leading" constant="20" id="88y-wm-M05"/>
+                            <constraint firstItem="3kH-A8-i14" firstAttribute="bottom" secondItem="mjt-TK-8dR" secondAttribute="bottom" constant="20" id="Mgb-kw-uDV"/>
+                            <constraint firstItem="3kH-A8-i14" firstAttribute="trailing" secondItem="mjt-TK-8dR" secondAttribute="trailing" constant="20" id="O5q-e3-mAw"/>
+                            <constraint firstItem="mjt-TK-8dR" firstAttribute="top" secondItem="3kH-A8-i14" secondAttribute="top" constant="20" id="hPU-l8-W1S"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="3kH-A8-i14"/>
                     </view>
                     <navigationItem key="navigationItem" id="7Ss-Ye-5cZ"/>
+                    <connections>
+                        <outlet property="recipeInstructions" destination="Aw0-Uy-zOa" id="CCM-bn-gkH"/>
+                        <outlet property="recipeName" destination="5cr-rU-IaR" id="FdK-Eu-CVd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LgO-xB-dUw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3471" y="-152"/>
+            <point key="canvasLocation" x="3469.5652173913045" y="-152.00892857142856"/>
         </scene>
         <!--My Recipes Category View Controller-->
         <scene sceneID="jOq-R3-YnN">
