--- a/Recipea/View/RecipeCell.xib
+++ b/Recipea/View/RecipeCell.xib
@@ -9,28 +9,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeCell" rowHeight="61" id="KGk-i7-Jjw" customClass="RecipeCell" customModule="Recipea" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="310" height="61"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeCell" rowHeight="69" id="KGk-i7-Jjw" customClass="RecipeCell" customModule="Recipea" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="314" height="69"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="RecipeCell" customModule="Recipea" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="310" height="61"/>
+                <rect key="frame" x="0.0" y="0.0" width="314" height="69"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gBV-J4-lNO">
-                        <rect key="frame" x="5" y="5" width="300" height="50"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="0jV-xa-fIK">
+                        <rect key="frame" x="10" y="10" width="294" height="50"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zOD-hX-w9M">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flame" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SuH-1w-inF">
+                                <rect key="frame" x="0.0" y="-1" width="40" height="50.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="NPP-0H-H0Y"/>
-                                    <constraint firstAttribute="height" constant="50" id="ePZ-zZ-2k1"/>
+                                    <constraint firstAttribute="width" constant="40" id="223-uf-oby"/>
+                                    <constraint firstAttribute="height" constant="40" id="xeV-ai-DeI"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UoH-Cz-QNd">
-                                <rect key="frame" x="58" y="0.0" width="242" height="50"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zIh-f3-18z">
+                                <rect key="frame" x="60" y="0.0" width="234" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Zf-G5-KqE">
-                                        <rect key="frame" x="5" y="5" width="232" height="40"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RhP-si-Bny">
+                                        <rect key="frame" x="10" y="10" width="214" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -38,31 +38,31 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="5Zf-G5-KqE" firstAttribute="top" secondItem="UoH-Cz-QNd" secondAttribute="top" constant="5" id="CT9-wj-c1H"/>
-                                    <constraint firstItem="5Zf-G5-KqE" firstAttribute="leading" secondItem="UoH-Cz-QNd" secondAttribute="leading" constant="5" id="aRV-8b-DoN"/>
-                                    <constraint firstAttribute="bottom" secondItem="5Zf-G5-KqE" secondAttribute="bottom" constant="5" id="bql-od-Yat"/>
-                                    <constraint firstAttribute="trailing" secondItem="5Zf-G5-KqE" secondAttribute="trailing" constant="5" id="mmG-z0-FhX"/>
+                                    <constraint firstItem="RhP-si-Bny" firstAttribute="top" secondItem="zIh-f3-18z" secondAttribute="top" constant="10" id="7fT-zP-Z56"/>
+                                    <constraint firstAttribute="bottom" secondItem="RhP-si-Bny" secondAttribute="bottom" constant="10" id="Qhd-uP-4v3"/>
+                                    <constraint firstItem="RhP-si-Bny" firstAttribute="leading" secondItem="zIh-f3-18z" secondAttribute="leading" constant="10" id="SWF-HZ-MYj"/>
+                                    <constraint firstAttribute="trailing" secondItem="RhP-si-Bny" secondAttribute="trailing" constant="10" id="lAw-Un-2jc"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="UoH-Cz-QNd" firstAttribute="leading" secondItem="zOD-hX-w9M" secondAttribute="trailing" constant="8" id="TEX-ex-2qU"/>
-                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="gBV-J4-lNO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="89a-Y1-C4j"/>
-                    <constraint firstAttribute="trailing" secondItem="gBV-J4-lNO" secondAttribute="trailing" constant="5" id="CLO-j2-NBx"/>
-                    <constraint firstAttribute="bottom" secondItem="gBV-J4-lNO" secondAttribute="bottom" constant="5" id="FLm-bE-1bN"/>
-                    <constraint firstItem="gBV-J4-lNO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="eEJ-wC-z9m"/>
+                    <constraint firstAttribute="trailing" secondItem="0jV-xa-fIK" secondAttribute="trailing" constant="10" id="sta-Lx-zGH"/>
+                    <constraint firstItem="0jV-xa-fIK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="tui-A4-W0W"/>
+                    <constraint firstItem="0jV-xa-fIK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="v2D-Ih-DUI"/>
+                    <constraint firstAttribute="bottom" secondItem="0jV-xa-fIK" secondAttribute="bottom" constant="10" id="wNz-Xz-64Q"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="recipeImage" destination="zOD-hX-w9M" id="iBC-d3-LjK"/>
-                <outlet property="recipeLabel" destination="5Zf-G5-KqE" id="Gca-TQ-wAc"/>
+                <outlet property="recipeImage" destination="SuH-1w-inF" id="VYS-VI-Kb6"/>
+                <outlet property="recipeLabel" destination="RhP-si-Bny" id="PmC-V9-ZbJ"/>
             </connections>
-            <point key="canvasLocation" x="130.43478260869566" y="96.09375"/>
+            <point key="canvasLocation" x="131.8840579710145" y="98.772321428571431"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="flame" catalog="system" width="109" height="128"/>
+    </resources>
 </document>
