--- a/Recipea/View/Base.lproj/Main.storyboard
+++ b/Recipea/View/Base.lproj/Main.storyboard
@@ -254,14 +254,14 @@
             <objects>
                 <viewController id="V6x-gj-8wC" customClass="DiscoverRecipeViewController" customModule="Recipea" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jJE-P1-pNQ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XIb-0l-eGN">
-                                <rect key="frame" x="0.0" y="88" width="414" height="912"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="1212"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4B-p7-jbl" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GXk-WT-Dnn">
                                                 <rect key="frame" x="20" y="70" width="374" height="23.5"/>
@@ -273,7 +273,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JGU-NY-Qnp">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JGU-NY-Qnp">
                                                 <rect key="frame" x="20" y="20" width="374" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="wom-b2-4ZF"/>
@@ -311,7 +311,6 @@
                                             <constraint firstAttribute="trailing" secondItem="Ml9-uG-esP" secondAttribute="trailing" constant="20" id="IJi-Hc-Bih"/>
                                             <constraint firstItem="VSZ-g1-LSC" firstAttribute="leading" secondItem="V4B-p7-jbl" secondAttribute="leading" constant="20" id="JMR-Ag-qgb"/>
                                             <constraint firstItem="Ml9-uG-esP" firstAttribute="top" secondItem="VSZ-g1-LSC" secondAttribute="bottom" constant="10" id="MSi-Dr-oq1"/>
-                                            <constraint firstAttribute="height" constant="1000" id="Nau-ts-KIn"/>
                                             <constraint firstItem="hEh-m3-Krc" firstAttribute="leading" secondItem="V4B-p7-jbl" secondAttribute="leading" constant="20" id="Oj0-7x-cxd"/>
                                             <constraint firstItem="VSZ-g1-LSC" firstAttribute="top" secondItem="hEh-m3-Krc" secondAttribute="bottom" constant="15" id="S2F-9g-JCr"/>
                                             <constraint firstAttribute="trailing" secondItem="GXk-WT-Dnn" secondAttribute="trailing" constant="20" id="SZM-vy-nTt"/>
@@ -319,6 +318,7 @@
                                             <constraint firstItem="hEh-m3-Krc" firstAttribute="top" secondItem="GXk-WT-Dnn" secondAttribute="bottom" constant="10" id="hbA-aS-6Yq"/>
                                             <constraint firstItem="JGU-NY-Qnp" firstAttribute="leading" secondItem="V4B-p7-jbl" secondAttribute="leading" constant="20" id="jdJ-wV-J8D"/>
                                             <constraint firstAttribute="trailing" secondItem="VSZ-g1-LSC" secondAttribute="trailing" constant="20" id="kPn-ZM-VJP"/>
+                                            <constraint firstAttribute="height" constant="1300" id="oFN-1s-KM1"/>
                                             <constraint firstAttribute="trailing" secondItem="hEh-m3-Krc" secondAttribute="trailing" constant="20" id="oev-xs-e02"/>
                                             <constraint firstItem="Ml9-uG-esP" firstAttribute="leading" secondItem="V4B-p7-jbl" secondAttribute="leading" constant="20" id="tDV-rB-SID"/>
                                             <constraint firstAttribute="trailing" secondItem="JGU-NY-Qnp" secondAttribute="trailing" constant="20" id="zac-Zq-eac"/>
@@ -344,9 +344,13 @@
                         <viewLayoutGuide key="safeArea" id="3kH-A8-i14"/>
                     </view>
                     <navigationItem key="navigationItem" id="7Ss-Ye-5cZ">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="3fq-Tp-vTb"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="3fq-Tp-vTb">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="V6x-gj-8wC" id="cOZ-Jh-k6J"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
-                    <size key="freeformSize" width="414" height="1000"/>
+                    <size key="freeformSize" width="414" height="1300"/>
                     <connections>
                         <outlet property="recipeIngredients" destination="hEh-m3-Krc" id="vCJ-hv-wua"/>
                         <outlet property="recipeInstructions" destination="Ml9-uG-esP" id="xMf-eL-sDG"/>
@@ -458,7 +462,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UDc-pD-sDs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3470" y="492"/>
+            <point key="canvasLocation" x="3470" y="709"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z2Y-L7-ESD">
